discussion/kv_engine/168693/168693_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50110: Flusher doesn't wakeup CheckpointMemRecovery in Eager mode

CheckpointRemoval::Eager ensures that closed/unref checkpoints are
detected in-place at cursor move and moved to the Destroyer.
The Flusher needs to care about that only if the legacy Lazy mode is
enabled.

Change-Id: Id031d2276f540cc481c83848ea9057e3f7c2fe72

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-01-13 14:43:07.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-13 14:45:01.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42791/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42791/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36258/ : ABORTED

CMake error: CMakeLists.txt:134 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36258/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36258/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4448/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4448/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15610/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15610/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16469/ : ABORTED

Compile error at [2022-01-13T14:44:40.743Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/flusher.cc:253:31:
error: invalid use of incomplete type ?class EventuallyPersistentEngine?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16469/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16469/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16762/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16762/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17555/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17555/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24882/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4506/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4506/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14803/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/flusher.cc:253:33: error: member access into incomplete type "EventuallyPersistentEngine" [clang-diagnostic-error]
            store->getEPEngine().getCheckpointConfig().getCheckpointRemoval();
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/globaltask.h:49:7: note: forward declaration of "EventuallyPersistentEngine"
class EventuallyPersistentEngine;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14803/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/flusher.cc:253:33:
error: member access into incomplete type "EventuallyPersistentEngine" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14803/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13648/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
